syntax = "proto3";
package u2u.types;
option go_package = "github.com/unicornultrafoundation/go-hashgraph/proto/u2u/types";

message Validator {
    bytes address = 1;
    uint64 staked_balance = 2;
    bool slashed = 3;
    uint64 activation_epoch = 4;
    uint64 exit_epoch = 5;
    uint64 withdrawable_epoch = 6;
    uint64 accumulated_reward_per_token = 7;
    uint64 commission_reward = 8;
    uint64 last_block_id = 9;
    uint64 last_online_time = 10;
    uint64 uptime = 11;
    uint64 prev_tx_fees = 12;
    uint64 tx_fees = 13;
}

message Block {
    uint64 id = 1;
    uint64 time = 2;
    bytes hash = 3;
}

message Withdrawal {
    uint64 validator_index = 1;
    uint64 delegator_index = 2;
    uint64 amount = 3;
    uint64 epoch = 4;
}

message WithdrawalReward {
    uint64 delegator_index = 1;
    uint64 amount = 2;
}

message Delegator  {
    bytes address = 1;
}

message Delegation {
    uint64 validator_index = 1;
    uint64 delegator_index = 2;
    uint64 amount = 3;
    uint64 last_accumulated_reward_per_token = 4;
}